--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"require": {
 		"laravel/framework": "4.2.*",
 		"cartalyst/sentry": "2.1.*",
-		"j7mbo/twitter-api-php": "dev-master"
+		"abraham/twitteroauth": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
